--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Testing Heroku",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node index.js"
   },
   "dependencies": {
     "pg": "^7.11.0"
